# adventofcode

./: .gitignore  .gitmodules  README.md  start_aoc.sh  test.py
C/: .clang-format  .clangd  .editorconfig  .gitignore  .vimdir  .ycm_extra_conf.py  CMakeLists.txt  CMakePresets.json  Makefile  Makefile.cygwin  README.md  runner.sh
C++/: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  const_test.cpp  test.cpp  test_ranges.cpp
C++/2015/: CMakeLists.txt  aoc_2015_01.cpp  aoc_2015_02.cpp  aoc_2015_03.cpp  aoc_2015_05.cpp
C++/2015/01/: CMakeLists.txt  aoc_2015_01.cpp
C++/2015/02/: aoc_2015_02.cpp
C++/2015/03/: aoc_2015_03.cpp
C++/2016/: CMakeLists.txt  aoc_2016_01.cpp
C++/2017/: CMakeLists.txt  aoc_2017_01.cpp  aoc_2017_02.cpp  aoc_2017_03.cpp
C++/2017/01/: CMakeLists.txt  aoc_2017_01.cpp
C++/2017/02/: aoc_2017_02.cpp
C++/2018/: CMakeLists.txt  aoc_2018_01.cpp  aoc_2018_02.cpp  aoc_2018_03.cpp
C++/2019/: CMakeLists.txt  aoc_2019_01.cpp  aoc_2019_03.cpp
C++/2019/01/: aoc_2019_01.cpp
C++/2019/03/: CMakeLists.txt  aoc_2019_03.cpp
C++/2020/: CMakeLists.txt  aoc_2020_01.cpp  aoc_2020_02.cpp  aoc_2020_03.cpp  aoc_2020_04.cpp  aoc_2020_05.cpp  aoc_2020_15.cpp  aoc_2020_17.cpp
C++/2021/: CMakeLists.txt  aoc_2021_01.cpp  aoc_2021_03.cpp
C++/2021/01/: CMakeLists.txt  aoc_2021_01.cpp
C++/2022/: CMakeLists.txt  aoc_2022_01.cpp  aoc_2022_02.cpp  aoc_2022_03.cpp
C++/2022/01/: CMakeLists.txt  aoc_2022_01.cpp  tempCodeRunnerFile.cpp
C++/2022/02/: aoc_2022_02.cpp
C++/2022/03/: aoc_2022_03.cpp
C++/2023/: CMakeLists.txt  aoc_2023_01.cpp  aoc_2023_02.cpp  aoc_2023_03.cpp  aoc_2023_04.cpp  aoc_2023_08.cpp  aoc_2023_11.cpp
C++/2023/01/: aoc_2023_01.cpp
C++/2023/02/: aoc_2023_02.cpp
C++/2023/03/: aoc_2023_03.cpp
C++/2023/04/: aoc_2023_04.cpp
C++/2023/08/: aoc_2023_08.cpp
C++/2023/11/: aoc_2023_11.cpp
C++/2024/: CMakeLists.txt  aoc_2024_01.cpp  aoc_2024_02.cpp  aoc_2024_03.cpp  aoc_2024_04.cpp  aoc_2024_05.cpp  aoc_2024_06.cpp  aoc_2024_07.cpp  aoc_2024_08.cpp  aoc_2024_09.cpp  aoc_2024_10.cpp  aoc_2024_11.cpp  aoc_2024_13.cpp  aoc_2024_14.cpp  aoc_2024_15.cpp
C++/2024/03/: aoc_2024_03.cpp
C++/bench/: aoc_2023_04.cpp
C++/cmake/: AocGenerateDays.cmake
C++/include/: aoc_io.hpp  aoc_string.hpp  aoc_timer.hpp  aoc_types.hpp  util.hpp
C++/lib/: CMakeLists.txt  Makefile  aoc_io.cpp  aoc_string.cpp  cmake_install.cmake
C/2015/: CMakeLists.txt  README.md  aoc_2015_01.c  aoc_2015_02.c  aoc_2015_03.c  aoc_2015_04.c  aoc_2015_05.c  aoc_2015_06.c  aoc_2015_11.c
C/2015/01/: CMakeLists.txt  aoc_2015_01.c
C/2015/02/: CMakeLists.txt  aoc_2015_02.c
C/2015/03/: aoc_2015_03.c
C/2015/04/: aoc_2015_04.c
C/2015/05/: aoc_2015_05.c
C/2015/11/: aoc_2015_11.c
C/2016/: CMakeLists.txt  README.md  aoc_2016_01.c  aoc_2016_02.c  aoc_2016_03.c  aoc_2016_05.c  aoc_2016_06.c  aoc_2016_07.c  aoc_2016_08.c
C/2016/01/: CMakeLists.txt  aoc_2016_01.c
C/2016/02/: aoc_2016_02.c
C/2016/03/: CMakeLists.txt  aoc_2016_03.c
C/2016/05/: aoc_2016_05.c
C/2016/06/: aoc_2016_06.c
C/2016/07/: aoc_2016_07.c
C/2016/08/: aoc_2016_08.c
C/2016/5/: aoc_2016_5.c
C/2016/6/: aoc_2016_6.c
C/2017/: CMakeLists.txt  README.md  aoc_2017_01.c  aoc_2017_02.c  aoc_2017_03.c
C/2017/01/: aoc_2017_01.c
C/2017/02/: aoc_2017_02.c
C/2017/03/: aoc_2017_03.c
C/2019/: CMakeLists.txt  README.md  aoc_2019_01.c  aoc_2019_02.c  aoc_2019_03.c  aoc_2019_04.c  aoc_2019_05.c  aoc_2019_06.c
C/2019/01/: aoc_2019_01.c
C/2019/02/: aoc_2019_02.c
C/2019/03/: aoc_2019_03.c
C/2019/04/: aoc_2019_04.c
C/2019/05/: aoc_2019_05.c
C/2019/06/: aoc_2019_06.c
C/2019/intcode/: CMakeLists.txt  intcode.c  intcode.h
C/2020/: CMakeLists.txt  aoc_2020_01.c  aoc_2020_02.c  aoc_2020_03.c  aoc_2020_04.c  aoc_2020_05.c  aoc_2020_06.c  aoc_2020_07.c  aoc_2020_08.c  aoc_2020_09.c  aoc_2020_10.c  aoc_2020_11.c  aoc_2020_12.c  aoc_2020_13.c  aoc_2020_14.c  aoc_2020_15.c  aoc_2020_16.c  aoc_2020_16.h  aoc_2020_17.c  aoc_2020_17.h  main_2020_16.c  main_2020_17.c
C/2021/: CMakeLists.txt  README.md  aoc_2021_01.c  aoc_2021_02.c  aoc_2021_03.c  aoc_2021_04.c  aoc_2021_05.c  aoc_2021_06.c  aoc_2021_07.c  aoc_2021_08.c  aoc_2021_10.c  aoc_2021_18.c
C/2021/01/: aoc_2021_01.c
C/2021/02/: aoc_2021_02.c
C/2021/03/: aoc_2021_03.c
C/2021/04/: aoc_2021_04.c
C/2021/05/: aoc_2021_05.c  aoc_2021_05_2.c  aoc_2021_05_3.c
C/2021/06/: aoc_2021_06.c
C/2021/07/: aoc_2021_07.c
C/2021/08/: aoc_2021_08.c
C/2021/1/: aoc_2021_1.c
C/2021/10/: aoc_2021_10.c
C/2021/18/: aoc_2021_18.c
C/2022/: CMakeLists.txt  README.md  aoc_2022_01.c  aoc_2022_02.c  aoc_2022_03.c  aoc_2022_04.c  aoc_2022_06.c  aoc_2022_12.c
C/2022/01/: aoc_2022_01.c
C/2022/02/: aoc_2022_02.c
C/2022/03/: aoc_2022_03.c
C/2022/04/: aoc_2022_04.c
C/2022/06/: aoc_2022_06.c
C/2023/: CMakeLists.txt  aoc_2023_01.c  aoc_2023_02.c  aoc_2023_03.c  aoc_2023_04.c  aoc_2023_06.c
C/2024/: CMakeLists.txt  aoc_2024_01.c  aoc_2024_02.c  aoc_2024_03.c  aoc_2024_04.c  aoc_2024_05.c  aoc_2024_06.c  aoc_2024_12.c  aoc_2024_13.c  aoc_2024_14.c
C/cmake/: AocGenerateDays.cmake
C/debugverbose/: .ninja_deps  .ninja_log  Makefile  build.ninja  cmake_install.cmake  compile_commands.json
C/include/: aoc_alloc.h  aoc_array.h  aoc_grid.h  aoc_hash.h  aoc_hash_light.h  aoc_header.h  aoc_io.h  aoc_list.h  aoc_mem.h  aoc_regex.h  aoc_sets.h  aoc_stack.h  aoc_string.h  aoc_timer.h  aoc_types.h  aoc_utils.h
C/lib/: CMakeLists.txt  Makefile  aoc_alloc.c  aoc_array.c  aoc_bench.c  aoc_grid.c  aoc_grid_hash.c  aoc_hash.c  aoc_hash_light.c  aoc_header.c  aoc_io.c  aoc_list.c  aoc_mem.c  aoc_regex.c  aoc_sets.c  aoc_stack.c  aoc_string.c  aoc_timer.c  aoc_utils.c
C/tests/: .clangd
Rust/: .gitignore  Cargo.toml  README.md
Rust/.cargo/: config.toml
Rust/2015/: Cargo.toml
Rust/2016/: Cargo.toml
Rust/2017/: Cargo.toml
Rust/2019/: Cargo.toml
Rust/2021/: Cargo.toml
Rust/2023/: Cargo.toml
Rust/2024/: Cargo.toml
Rust/2025/: Cargo.toml
Rust/aoc_utils/: Cargo.toml
(+489 files in other folders)
