[workspace]
resolver = "2"
members = ["aoc_utils",
    "day01"
, "day02", "day03", "day04", "day05", "day06"]

[workspace.package]
description = "Solutions for Advent of Code 2016"
version = "0.1.0"
authors = ["Christian Lundh <christianlundh1974@gmail.com"]
edition = "2024"

[workspace.dependencies]
aoc_utils = { version = "0.1.0", path = "aoc_utils" }

